--- a/build.gradle.1
+++ b/build.gradle.1
@@ -13,6 +13,7 @@ plugins {
     id("com.google.cloud.tools.jib") version "3.3.1"
     id("org.sonarqube") version "3.3"
     id("jacoco")
+    id 'pmd'
 }
 
 apply plugin: 'java'
@@ -36,6 +37,7 @@ repositories {
     mavenCentral()
     gradlePluginPortal()
     mavenLocal()
+    jcenter()
 }
 
 sonarqube {
@@ -171,4 +173,9 @@ jacocoTestReport {
             csv.enabled false
             xml.destination file("${buildDir}/reports/jacoco.xml")
     }
+
+pmd {
+    toolVersion = '6.40.0'
+    ignoreFailures = true
+}
 }
